--- a/config/config.json
+++ b/config/config.json
@@ -64,7 +64,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
-     "ListingImage":"/images/property-1.webp",
+     "ListingImage":"/images/1.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/core.png",
      "btntext":"Invest Now"
@@ -80,7 +80,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
-     "ListingImage":"/images/property-2.webp",
+     "ListingImage":"/images/2.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/core.png",
      "btntext":"Invest Now"
@@ -96,7 +96,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Partner",
-     "ListingImage":"/images/property-1.webp",
+     "ListingImage":"/images/3.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/partner.png",
      "btntext":"View Details"
@@ -112,7 +112,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
-     "ListingImage":"/images/property-1.webp",
+     "ListingImage":"/images/4.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/core.png",
      "btntext":"Invest Now"
@@ -128,7 +128,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Partner",
-     "ListingImage":"/images/property-1.webp",
+     "ListingImage":"/images/5.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/partner.png",
      "btntext":"View Details"
@@ -144,7 +144,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
-     "ListingImage":"/images/property-1.webp",
+     "ListingImage":"/images/7.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/core.png",
      "btntext":"Invest Now"
@@ -160,7 +160,7 @@
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Partner",
-     "ListingImage":"/images/property-1.webp",
+     "ListingImage":"/images/8.jpg",
      "days":"20 days left",
      "typeOfferingIcon":"/images/partner.png",
      "btntext":"Notify Me"
