--- a/config/config.json
+++ b/config/config.json
@@ -25,7 +25,7 @@
   "params": {
     "contact_form_action": "",
     "tag_manager_id": "",
-    "footer_content": "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur.",
+    "footer_content":"Tokenixe is a real estate tokenization marketplace that allows investors to diversify their portfolio by investing in rental properties with small amounts of  capital, utilizing blockchain technology and non-fungible tokens (NFTs).",
     "copyright": "© 2023 Beampad | All Rights Reserved"
   },
   "metadata": {
@@ -60,7 +60,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
@@ -76,7 +76,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
@@ -92,7 +92,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Partner",
@@ -108,7 +108,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
@@ -124,7 +124,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Partner",
@@ -140,7 +140,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Core",
@@ -156,7 +156,7 @@
      "location":"Dubai, United Arab Emirates",
      "bhk":"3 BHK apartment",
      "DividendPercentage":"8.32%",
-     "scheme":"Monthly Frequently",
+     "scheme":"Monthly",
      "totalSupply":"5000 REATs",
      "reats":"608.90",
      "OfferingType":"Partner",
