--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "next": "^13.0.6",
     "next-mdx-remote": "^4.2.0",
     "react": "18.2.0",
+    "react-context-api": "^1.0.2",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-horizontal-scrolling-menu": "^4.0.4",
     "react-icons": "^4.7.1",
     "react-lite-youtube-embed": "^2.3.52",
     "rehype-slug": "^5.1.0",
