--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,12 @@
 {
   "site": {
-    "title": "BeamPad",
+    "title": "Tokenixe",
     "base_url": "/",
     "favicon": "/images/favicon.png",
     "logo": "/images/logo.png",
     "logo_width": "200",
     "logo_height": "48",
-    "logo_text": "BeamPad"
+    "logo_text": "Tokenixe"
   },
 
   "settings": {
@@ -102,7 +102,7 @@
      "days":"20 days left",
      "typeOfferingIcon":"/images/partner.png",
      "btntext":"View Details",
-     "icon":"/images/eye.svg"
+     "icon":"/images/Eye.svg"
   },
   {
     "id":"4",
@@ -136,7 +136,7 @@
      "days":"20 days left",
      "typeOfferingIcon":"/images/partner.png",
      "btntext":"View Details",
-     "icon":"/images/eye.svg"
+     "icon":"/images/Eye.svg"
   },
   {
     "id":"6",
