--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^4.2.4",
     "next": "^13.0.6",
     "next-mdx-remote": "^4.2.0",
-    "react": "18.2.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-context-api": "^1.0.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-horizontal-scroll-menu": "^0.0.3",
     "react-horizontal-scrolling-menu": "^4.0.4",
     "react-icons": "^4.7.1",
     "react-lite-youtube-embed": "^2.3.52",
