--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "next-mdx-remote": "^4.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-accordion": "^0.3.0",
     "react-context-api": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-horizontal-scroll-menu": "^0.0.3",
     "react-horizontal-scrolling-menu": "^4.0.4",
     "react-icons": "^4.7.1",
     "react-lite-youtube-embed": "^2.3.52",
+    "react-tabs": "^6.0.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "swiper": "^8.4.5"
@@ -46,6 +47,6 @@
     "sass": "^1.56.2",
     "sharp": "^0.31.2",
     "tailwind-bootstrap-grid": "^5.0.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.3.2"
   }
 }
