--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "classnames": "^2.3.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
