--- a/config/config.json
+++ b/config/config.json
@@ -220,7 +220,25 @@
     "TabName": "Documents",
    "component": "<Documents />"  
   } 
- ] 
+ ],
+ "images":[
+  { "id": 1, 
+  "src": "/images/1.jpg"},
+  { "id": 2, 
+  "src": "/images/2.jpg"},
+  { "id": 3, 
+  "src": "/images/3.jpg"
+},
+{ "id": 4, 
+"src": "/images/4.jpg"
+},
+{ "id": 5, 
+"src": "/images/5.jpg"
+},
+{ "id": 6, 
+"src": "/images/7.jpg"
+} 
+]
 
 }
 
