--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "chart.js": "2.9.3",
     "classnames": "^2.3.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
@@ -30,6 +31,7 @@
     "react-gtm-module": "^2.0.11",
     "react-horizontal-scrolling-menu": "^4.0.4",
     "react-icons": "^4.7.1",
+    "react-image-gallery": "^1.2.11",
     "react-lite-youtube-embed": "^2.3.52",
     "react-tabs": "^6.0.1",
     "rehype-slug": "^5.1.0",
